examples/test/testpolicy18264.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18264
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key42: value36
      key12: value24
      key24: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value8
          key28: value49
          key22: value4
